# lwpb

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  autogen.sh  bootstrap  config.status  configure  configure.ac  lwpb.py.c  protodef.py  setup.py  testlwpb.py
protobuf-2.1.0/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
protobuf-2.1.0/gtest/: Makefile.in  configure
protobuf-2.1.0/java/: pom.xml
protobuf-2.1.0/python/: setup.py
protobuf-2.1.0/src/: Makefile.am  Makefile.in
protobuf-2.1.0/src/google/protobuf/compiler/: main.cc
protobuf-2.1.0/src/google/protobuf/compiler/lwpb/: lwpb_generator.cc  lwpb_generator.h
protobuf-2.1.0/vsprojects/: libprotobuf.vcproj  protobuf.sln  tests.vcproj
python/: decoder.c  decoder.h  descriptor.c  descriptor.h  encoder.c  encoder.h  flat.py  lwpb.py.c  module.c  pbindex.py  pbio.py  pblookup.py  pbpart.py  pbsplit.py  primitives.c  primitives.h  protodef.py  pythoncompat.h  setup.py  tests.py
python/debian/: .control.swp  changelog  control
python/lwpb/: __init__.py  codec.py  stream.py
python/percent/: codec.py  stream.py
python/test/: Makefile  README.md  python_format.cc  python_format.h  test.proto  test.proto.pb  truthdb.cc  truthdb.txt
src/: Makefile  Makefile.am  Makefile.in  optisms.pb.h  test.c  test.rb
src/include/lwpb/: lwpb.h
src/include/lwpb/arch/: cc.h  sys.h
src/include/lwpb/core/: arch.h  debug.h  decoder.h  encoder.h  misc.h  types.h
src/include/lwpb/rpc/: client.h  direct.h  server.h  socket_client.h  socket_server.h  transport.h
src/include/lwpb/utils/: struct_decoder.h  struct_map.h
src/lib/: lwpb.h  lwpb_decoder.c  lwpb_encoder.c
src/lwpb/: buf.c  client.c  client.h  decoder.c  encoder.c  encoder.h  lwpb.h  lwpb_private.h  misc.c  private.h  server.c  server.h  service.c  service.h
src/lwpb/core/: buf.c  debug.h  decoder.c  decoder.h  encoder.c  encoder.h  encoder2.c  misc.c  private.h  types.h
src/lwpb/rpc/: client.c  client.h  direct.c  server.c  server.h  service.c  service.h  socket_client.c  socket_helper.c  socket_helper.h  socket_protocol.proto  socket_protocol_pb2.c  socket_protocol_pb2.h  socket_server.c  transport.c  transport.h
src/lwpb/rpc/direct/: direct.c  direct.h
src/lwpb/rpc/socket/: protocol.h  socket_client.c  socket_client.h  socket_header.proto  socket_header_pb2.c  socket_header_pb2.h  socket_protocol.c  socket_protocol.h  socket_server.c  socket_server.h
src/lwpb/utils/: struct_decoder.c  struct_map.h  utils.c
src/test/: test1.c  test1.proto  test1_pb2.c  test1_pb2.h  test2.c  test2_check.c  test2_generate.cc  test2_test_arrays.h  test3.c  test_full.c  test_full.proto  test_full_arrays.h  test_full_generate.cc  test_rpc.proto  test_rpc_direct.c  test_rpc_socket_client.c  test_rpc_socket_server.c  test_simple.c  test_simple.proto  test_struct_map.c  test_struct_map.proto
test/: Makefile  Makefile.am  test_full.proto  test_full_arrays.h  test_full_generate.cc  test_rpc_direct.c  test_rpc_socket_client.c
